k8s/workloads/vaultwarden/backup.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backup
  labels:
    app: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backup
  template:
    metadata:
      labels:
        app: backup
    spec:
      nodeSelector:
        platform.io/type: main
      containers:
        - name: backup
          image: reaper0x1/bitwarden-portal:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: backup
              mountPath: /app/backups
              subPath: backups
      volumes:
        - name: backup
          persistentVolumeClaim:
            claimName: backup
