k8s/workloads/vaultwarden/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      nodeSelector:
        platform.io/type: main
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:alpine
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden

spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: vaultwarden
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.remini.site`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
